--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: MotorPH Payroll System Documentation
-description Abejo J., Pascual, J., Samuel, L. G.
-show_downloads; true
+description: Abejo J., Pascual, J., Samuel, L. G.
+show_downloads: true
 theme: jekyll-theme-minimal
