--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,3 @@
 title: MotorPH Payroll System Documentation
-description: Abejo J., Pascual, J., Samuel, L. G.
-show_downloads: true
+description: Abejo J., Pascual, J., Grefiel, L. S.
 theme: jekyll-theme-minimal
